<resources>

    <string name="sign_up_img"> </string>
    <string name="sign_up"> Sign up </string>
    <string name="password">Password</string>
    <string name="email">email</string>
    <string name="retype_password">re-type password</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="signup">SIGNUP</string>
    <string name="exit">EXIT</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="todo0">TODO</string>
    <string name="fname">fname</string>
    <string name="lname">lname</string>
    <string name="pass1">pass1</string>
    <string name="pass2">pass2</string>
    <string name="app_name">GUI demo 17L-4095 </string>
    <string name="title_activity_tab_layout">GUI demo 17L-4095</string>
    <string name="tab_text_1"></string>
    <string name="tab_text_2"></string>
    <string name="tab_text_3"></string>
    <string name="tab_text_4"></string>
    <string name="title_activity_tab">tab</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="title_activity_tab_fragment">tabFragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="username">Username</string>
    <string name="_3431">3431</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="_3491">3491</string>
    <string name="_6530">6530</string>
    <string name="_217">2178</string>
    <string name="todo">TODO</string>
    <string name="posts">posts</string>
</resources>

